# hoogle-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
config/: default.toml
crates/hoogle-core/: Cargo.toml
crates/hoogle-core/src/: cache.rs  config.rs  lib.rs  models.rs
crates/hoogle-core/src/backend/: local.rs  mod.rs  parse.rs  web.rs
crates/hoogle-core/src/haddock/: fetcher.rs  mod.rs  parser.rs  types.rs
crates/hoogle-syntax/: Cargo.toml
crates/hoogle-syntax/src/: haskell.rs  lib.rs  theme.rs  tokenizer.rs  tokens.rs
crates/hoogle-tui/: Cargo.toml
crates/hoogle-tui/src/: actions.rs  app.rs  bookmarks.rs  cli.rs  clipboard.rs  event.rs  export.rs  history.rs  keymap.rs  main.rs  project.rs
crates/hoogle-tui/src/ui/: bookmarks_popup.rs  doc_viewer.rs  filter_popup.rs  help_overlay.rs  history_popup.rs  layout.rs  mod.rs  module_browser.rs  package_popup.rs  pinned_panel.rs  preview_pane.rs  result_list.rs  search_bar.rs  sort_popup.rs  source_viewer.rs  status_bar.rs  theme_popup.rs  toc_popup.rs  yank_popup.rs
docs/: IMPLEMENTATION_PLAN.md
packaging/: homebrew-formula.rb
themes/: catppuccin_mocha.toml  dracula.toml  gruvbox_dark.toml  monokai.toml  nord.toml  solarized_dark.toml
