[package]
name = "hoogle-core"
version = "0.1.0"
edition = "2021"
description = "Core library for hoogle-tui: backends, Haddock parsing, caching, and configuration"
license = "MIT"
repository = "https://github.com/joshburgess/hoogle-tui"
keywords = ["haskell", "hoogle"]
categories = ["development-tools"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json", "gzip"] }
scraper = "0.21"
url = { version = "2", features = ["serde"] }
dirs = "6"
toml = "0.8"
sha2 = "0.10"
async-trait = "0.1"
which = "7"
regex = "1"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
